--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -1,11 +1,5 @@
-.canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-
 .switch {
-    position: fixed;
+    position: absolute;
     top: 10px;
     right: 10px;
 }
