--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
   background: #000000;
   color: #ffcc11;
   overflow: hidden;
